Fixing width issues on mobile

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -5,5 +5,6 @@
     color: colors.$white;
     font-family:  Helvetica, Arial, sans-serif;
     min-height: 100vh;
+    width: 100vw;
 }
 
